tests/algorithms/x/Java/conversions/octal_to_decimal.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden138_octal_to_decimal206110065/001/Main.java:48: error: unreachable statement
        return 0;
        ^
/tmp/TestJavaTranspiler_Algorithms_Golden138_octal_to_decimal206110065/001/Main.java:55: error: unreachable statement
            return 0;
            ^
/tmp/TestJavaTranspiler_Algorithms_Golden138_octal_to_decimal206110065/001/Main.java:64: error: unreachable statement
            return 0;
            ^
3 errors
